--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nom de votre site</title>
-    <!-- Vous pouvez ajouter des liens vers des feuilles de style CSS ici -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 
 <body>
