--- a/index.html
+++ b/index.html
@@ -1,68 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nom de votre site</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tech2etc Ecommerce Tutorial</title>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
 
-</head>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
+    <body>
 
-    <!-- Section d'entête -->
-    <header>
-        <h1>Nom de votre site</h1>
-        <nav>
-            <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#apropos">À Propos</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!-- Section principale -->
-    <main>
-        <!-- Contenu de la page -->
-        <section id="accueil">
-            <h2>Accueil</h2>
-            <p>Bienvenue sur notre site !</p>
-        </section>
-
-        <section id="apropos">
-            <h2>À Propos</h2>
-            <p>Informations sur l'entreprise/organisation/personne.</p>
-        </section>
-
-        <section id="services">
-            <h2>Services</h2>
-            <p>Description des services offerts.</p>
-        </section>
-
-        <section id="blog">
-            <h2>Blog</h2>
-            <article>
-                <h3>Titre de l'article</h3>
-                <p>Contenu de l'article.</p>
-            </article>
-            <!-- Ajoutez d'autres articles ici -->
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Coordonnées et formulaire de contact.</p>
-        </section>
-    </main>
-
-    <!-- Section de pied de page -->
-    <footer>
-        <p>&copy; 2023 Nom de votre site. Tous droits réservés.</p>
-    </footer>
-
-</body>
+        <script src="script.js"></script>
+    </body>
 
 </html>
