--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
                 <li><a href="">compte</a></li>
                 <li><a href="" class="fas fa-shopping-cart"></a></li>
             </ul>
+            //responsive button
+            <div class="menu-btn">
+                <i class="fa fa-bars"></i>
+            </div>
         </nav>
         <link rel="stylesheet" href="style.css">
     </head>
