--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                 <i class="fa fa-bars"></i>
             </div>
     </nav>
-        <script src="script.js"></script>
+        <section class="content">
+            <h1>Nouveau produit pour Homme</h1>
+            <p>Meilleur qualité </p>
+            <button>Acheté Maintenant</button>
+        </section>
     </body>
 
 </html>
