--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p>Meilleur qualité </p>
             <button>Acheté Maintenant</button>
         </section>
+        <h1 class="pheading">Nos dernier produits</h1>
     </body>
 
 </html>
