--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </nav>
         
     <section class="content">
-            <h1>Nouveau produit pour Homme</h1><br>
-            <p>Meilleur qualité </p><br>
+            <h1>Nouveau produit pour Homme</h1>
+            <p>Meilleur qualité </p>
             <button>Acheté Maintenant</button>
     </section>
         
