--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
         
     <h1 class="pheading">Nos dernier produits</h1>
 
-        
+        <section class="sec">
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="1.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 
 </html>
