--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <h1 class="pheading">Nos dernier produits</h1>
 
         <section class="sec">
+            <!--1start-->
             <div class="product">
                 <div class="card">
                     <div class="img"><img src="1.jpeg" alt=""></div>
@@ -46,6 +47,98 @@
                     </div>
                 </div>
             </div>
+            <!--end-->
+            <!--2start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="2.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
+            <!--4start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="3.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
+            <!--5start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="4.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
+            <!--6start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="5.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
+            <!--7start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="6.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
+            <!--8start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="7.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
+            <!--start-->
+            <div class="product">
+                <div class="card">
+                    <div class="img"><img src="8.jpeg" alt=""></div>
+                    <div class="desc">Homme</div>
+                    <div class="tittle">Basket noir</div>
+                    <div class="box">
+                        <div class="price">60$</div>
+                        <button class="btn">Acheter</button>
+                    </div>
+                </div>
+            </div>
+            <!--end-->
         </section>
     </body>
 
