--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             </div>
             <!--end-->
         </section>
+        <footer>
+            <p>Copyrights at <a href="">Ecommerce de youssef</a></p>
+        </footer>
     </body>
 
 </html>
