--- a/index.html
+++ b/index.html
@@ -1,148 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <title>Ecommerce de youssef</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Ecommerce de youssef</title>
+</head>
 
-    <body>
+<body>
     <nav class="navbar">
-            <div class="logo"><h1>Ecommerce de youssef</h1></div>
-            <ul class="menu">
-                <li><a href="" class="active">Accueil</a></li>
-                <li><a href="">Nouveauté</a></li>
-                <li><a href="">Tendance</a></li>
-                <li><a href="">compte</a></li>
-                <li><a href="" class="fas fa-shopping-cart"></a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fa fa-bars"></i>
-            </div>
+        <div class="logo">
+            <h1>Ecommerce de youssef</h1>
+        </div>
+        <ul class="menu">
+            <li><a href="" class="active">Accueil</a></li>
+            <li><a href="">Nouveauté</a></li>
+            <li><a href="">Tendance</a></li>
+            <li><a href="">compte</a></li>
+            <li><a href="" class="fas fa-shopping-cart"></a></li>
+        </ul>
+        <div class="menu-btn">
+            <i class="fa fa-bars"></i>
+        </div>
     </nav>
-        
-    <section class="content">
-            <h1>Nouveau produit pour Homme</h1>
-            <p>Meilleur qualité </p>
-            <button>Acheté Maintenant</button>
-    </section>
-        
-    <h1 class="pheading">Nos dernier produits</h1>
 
-        <section class="sec">
-            <!--1start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="1.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
+    <section class="content">
+        <h1>Nouveau produit pour Homme</h1>
+        <p>Meilleure qualité </p>
+        <button>Acheter Maintenant</button>
+    </section>
+
+    <h1 class="pheading">Nos derniers produits</h1>
+
+    <section class="sec">
+        <!-- Produit 1 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="1.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
                 </div>
             </div>
-            <!--end-->
-            <!--2start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="2.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
+        </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="2.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
                 </div>
             </div>
-            <!--end-->
-            <!--4start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="3.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
-                </div>
-            </div>
-            <!--end-->
-            <!--5start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="4.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
-                </div>
-            </div>
-            <!--end-->
-            <!--6start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="5.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
-                </div>
-            </div>
-            <!--end-->
-            <!--7start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="6.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
-                </div>
-            </div>
-            <!--end-->
-            <!--8start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="7.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
-                </div>
-            </div>
-            <!--end-->
-            <!--start-->
-            <div class="product">
-                <div class="card">
-                    <div class="img"><img src="8.jpeg" alt=""></div>
-                    <div class="desc">Homme</div>
-                    <div class="tittle">Basket noir</div>
-                    <div class="box">
-                        <div class="price">60$</div>
-                        <button class="btn">Acheter</button>
-                    </div>
-                </div>
-            </div>
-            <!--end-->
-        </section>
-        <footer>
-            <p>Copyrights at <a href="">Ecommerce de youssef</a></p>
-        </footer>
-    </body>
+        </div>
+        <!-- ... Ajouter les autres produits de la même manière ... -->
+    </section>
+
+    <footer>
+        <p>Copyrights at <a href="">Ecommerce de youssef</a></p>
+    </footer>
+</body>
 
 </html>
