--- a/index.html
+++ b/index.html
@@ -61,6 +61,78 @@
                 </div>
             </div>
         </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="3.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
+                </div>
+            </div>
+        </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="4.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
+                </div>
+            </div>
+        </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="5.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
+                </div>
+            </div>
+        </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="6.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
+                </div>
+            </div>
+        </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="7.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
+                </div>
+            </div>
+        </div>
+        <!-- Produit 2 -->
+        <div class="product">
+            <div class="card">
+                <div class="img"><img src="8.jpeg" alt=""></div>
+                <div class="desc">Homme</div>
+                <div class="title">Basket noir</div>
+                <div class="box">
+                    <div class="price">60$</div>
+                    <button class="btn">Acheter</button>
+                </div>
+            </div>
+        </div>
         <!-- ... Ajouter les autres produits de la même manière ... -->
     </section>
 
