--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
     <footer>
         <p>Copyrights at <a href="">Ecommerce de youssef</a></p>
     </footer>
+    <script>
+        $(".menu-btn).click(function{}{
+          $(".navbar .menu").toggleClass("active");
+          $(".menu-btn i").toggleClass("active);
+        });
+    </script>
 </body>
 
 </html>
