--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Ecommerce de youssef</title>
@@ -146,20 +147,44 @@
         });
     </script>
     <!-- ... Votre code HTML existant ... -->
+<!-- ... Votre code HTML existant ... -->
 
 <script>
     $(document).ready(function () {
-        // Sélectionnez tous les boutons d'achat
+        // Configurez votre clé publique Stripe
+        var stripe = Stripe('VOTRE_CLE_PUBLIQUE_STRIPE');
+
         $(".btn").click(function () {
             // Obtenez le titre et le prix du produit
             var title = $(this).closest(".card").find(".title").text();
             var price = $(this).closest(".card").find(".price").text();
 
-            // Affichez un message (vous pouvez le personnaliser ou le rediriger vers une page de paiement)
-            alert("Vous avez acheté : " + title + " pour " + price);
+            // Convertissez le prix en cents (Stripe utilise des centimes)
+            var amount = parseFloat(price.replace('$', '')) * 100;
+
+            // Créez une session de paiement avec Stripe
+            stripe.redirectToCheckout({
+                lineItems: [{
+                    price: 'PRIX_DU_PRODUIT_STRIPE',
+                    quantity: 1
+                }],
+                mode: 'payment',
+                successUrl: 'URL_DE_SUCCES',
+                cancelUrl: 'URL_D_ANNULATION',
+            }).then(function (result) {
+                if (result.error) {
+                    // Gérez les erreurs pendant la redirection
+                    alert(result.error.message);
+                }
+            });
         });
     });
 </script>
+
+</body>
+
+</html>
+
 
 </body>
 
