--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="menu">
             <li><a href="" class="active">Accueil</a></li>
-            <li><a href="">Nouveauté</a></li>
+            <li><a href="#nouveaux-produits">Nouveauté</a></li>
             <li><a href="">Tendance</a></li>
             <li><a href="">compte</a></li>
             <li><a href="" class="fas fa-shopping-cart"></a></li>
@@ -35,7 +35,7 @@
         <button>Acheter Maintenant</button>
     </section>
 
-    <h1 class="pheading">Nos derniers produits</h1>
+    <h1 id="nouveaux-produits" class="pheading">Nos derniers produits</h1>
 
     <section class="sec">
         <!-- Produit 1 -->
