--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <ul class="menu">
             <li><a href="" class="active">Accueil</a></li>
             <li><a href="#nouveaux-produits">Nouveauté</a></li>
-            <li><a href="">Tendance</a></li>
-            <li><a href="">compte</a></li>
+            <li><a href="#contact">Contacte</a></li>
             <li><a href="" class="fas fa-shopping-cart"></a></li>
         </ul>
         <div class="menu-btn">
@@ -138,7 +137,8 @@
     </section>
 
     <footer>
-        <p>Copyrights at <a href="">Ecommerce de youssef</a></p>
+        <p>Copyrights at <a href="">Ecommerce de youssef</a><br>
+            <a id="contact">Contacte</a><br>Contacter nous a exemple@gmail.com</p>
     </footer>
     <script>
         $(".menu-btn).click(function{}{
